--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "compression": "^1.6.2",
     "express": "^4.14.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-changed": "^1.3.0",
     "gulp-cssnano": "^2.1.2",
+    "gulp-filesize": "0.0.6",
     "gulp-freemarker": "^0.1.4",
+    "gulp-if": "^2.0.1",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-notify": "^2.2.0",
     "gulp-rev-all": "^0.8.24",
     "gulp-rev-delete-original": "^0.1.0",
-    "gulp-uglify": "^1.5.4"
+    "gulp-sequence": "^0.4.5",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.4",
+    "gulp-util": "^3.0.7",
+    "lodash": "^4.13.1",
+    "morgan": "^1.7.0",
+    "open": "0.0.5",
+    "require-dir": "^0.3.0"
   },
   "dependencies": {
     "del": "^2.2.1"
