--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.8",
     "lodash": "^4.13.1",
     "morgan": "^1.7.0",
     "open": "0.0.5",
