--- a/gulp/config.json
+++ b/gulp/config.json
@@ -2,7 +2,8 @@
   "root": {
     "src": "./src",
     "dest": "./dest",
-    "tmp": "./.tmp"
+    "tmp": "./.tmp",
+    "mock": "./mock"
   },
 
   "tasks": {
