--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lodash": "^4.13.1",
     "morgan": "^1.7.0",
     "open": "0.0.5",
-    "require-dir": "^0.3.0"
+    "require-dir": "^0.3.0",
+    "yog-devtools": "^0.1.0"
   },
   "dependencies": {
     "del": "^2.2.1"
