--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "gulp server",
+    "build": "gulp prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
