--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "gulp watch",
-    "start": "gulp server",
+    "start": "gulp watch",
     "build": "gulp prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
