--- a/gulp/config.json
+++ b/gulp/config.json
@@ -35,13 +35,17 @@
       "autoprefixer": {
         "browsers": ["last 3 version"]
       },
-      "sass": {
-        "indentedSyntax": true,
-        "includePaths": [
-          "./node_modules/normalize.css"
-        ]
-      },
-      "extensions": ["sass", "scss", "css"]
+      "extensions": ["css"]
+    },
+
+    "sass": {
+      "src": "sass",
+      "dest": "css",
+      "extensions": ["sass", "scss"]
+    },
+
+    "less": {
+      "extensions": ["less"]
     },
 
     "ftl": {
