--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "devDependencies": {
     "browser-sync": "^2.13.0",
     "compression": "^1.6.2",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-plugin-import": "^1.9.2",
     "express": "^4.14.0",
     "freemarker.js": "github:ittiam/freemarker.js",
     "gulp": "^3.9.1",
@@ -27,6 +30,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-rev-all": "github:ittiam/gulp-rev-all",
     "gulp-rev-delete-original": "^0.1.0",
+    "gulp-sass": "^2.3.2",
     "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
