--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   "devDependencies": {
     "browser-sync": "^2.13.0",
     "compression": "^1.6.2",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb-base": "^3.0.1",
-    "eslint-plugin-import": "^1.9.2",
+    "del": "^2.2.1",
     "express": "^4.14.0",
     "freemarker.js": "github:ittiam/freemarker.js",
     "gulp": "^3.9.1",
@@ -41,6 +39,5 @@
     "yog-devtools": "^0.1.0"
   },
   "dependencies": {
-    "del": "^2.2.1"
   }
 }
