--- a/mock/server.conf
+++ b/mock/server.conf
@@ -2,3 +2,4 @@ rewrite ^\/rest/hh/121 /mock/data.json
 rewrite ^\/rest/other /mock/other.json
 rewrite ^\/rest/login /mock/login.json
 rewrite ^\/rest/com /mock/com.json
+proxy ^\/api/v1/topics http://m.wdzj.com/dangan/interfaceIndexFilter
