--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "gulp-watch": "^4.3.8",
     "lodash": "^4.13.1",
     "require-dir": "^0.3.0",
-    "yog-devtools": "^0.1.0"
+    "yog-devtools": "^0.1.1"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
